--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "node-typescript-compiler": "^2.2.1",
         "prettier": "^2.5.1",
         "react-refresh": "^0.11.0",
+        "redux-devtools": "^3.7.0",
         "stream-browserify": "^3.0.0",
         "style-loader": "^3.3.0",
         "style-resources-loader": "^1.5.0",
@@ -69,6 +70,8 @@
         "path": "^0.12.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2"
+        "react-redux": "^8.0.4",
+        "react-router-dom": "^6.0.2",
+        "redux-thunk": "^2.4.1"
     }
 }
