--- a/package.json
+++ b/package.json
@@ -65,10 +65,14 @@
         "@walletconnect/client": "^1.8.0",
         "@walletconnect/qrcode-modal": "^1.8.0",
         "antd": "^4.18.3",
+        "axios": "^1.1.3",
+        "bootstrap": "^5.2.2",
+        "connected-react-router": "^6.9.3",
         "cyfs-sdk": "^0.5.3",
         "google-protobuf": "^3.20.1",
         "path": "^0.12.7",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.5.0",
         "react-dom": "^17.0.2",
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.0.2",
