--- a/package.json
+++ b/package.json
@@ -68,12 +68,16 @@
         "axios": "^1.1.3",
         "connected-react-router": "^6.9.3",
         "cyfs-sdk": "^0.5.3",
+        "ethers": "^5.7.2",
         "google-protobuf": "^3.20.1",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
         "path": "^0.12.7",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^8.0.4",
-        "react-router-dom": "^6.0.2",
-        "redux-thunk": "^2.4.1"
+        "react-router-dom": "^6.4.2",
+        "redux-thunk": "^2.4.1",
+        "sort-by": "^1.2.0"
     }
 }
